<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/glass_card_footer_margin"
    android:layout_marginLeft="@dimen/glass_card_margin"
    android:layout_marginRight="@dimen/glass_card_margin"
    android:layout_marginTop="@dimen/glass_card_margin"
    android:baselineAligned="false"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/item_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12px"
            android:layout_weight="1"
            android:text="@string/left_arrow"
            android:textSize="36sp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="@string/signs_graffiti"
                android:textAlignment="center"
                android:textSize="36sp"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12px"
            android:layout_weight="1"
            android:gravity="top|right"
            android:text="@string/right_arrow"
            android:textSize="36sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating_aa"
            android:textColor="@color/text_gray"
            android:textSize="30sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating_a"
            android:textColor="@color/text_green"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating_b"
            android:textColor="@color/text_gray"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating_c"
            android:textColor="@color/text_gray"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating_d"
            android:textColor="@color/text_gray"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">




    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/categories_signs"
            android:textColor="@color/text_blue"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:gravity="right"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/tap_for_info"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>



</LinearLayout>