<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/glass_card_footer_margin"
    android:layout_marginLeft="@dimen/glass_card_margin"
    android:layout_marginRight="@dimen/glass_card_margin"
    android:layout_marginTop="@dimen/glass_card_margin"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/left_arrow"
            android:textColor="@color/white"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/title_categories"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/right_arrow"
            android:textColor="@color/white"
            android:textSize="45sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/glass_card_footer_margin"
        android:layout_marginLeft="@dimen/glass_card_two_column_margin"
        android:layout_marginRight="@dimen/glass_card_margin"
        android:layout_weight="0"
        android:gravity="bottom"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/title_categories"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rating_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:paddingBottom="35dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rating_text_aa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/rating_aa"
                android:textSize="25sp" />

            <View
                android:id="@+id/bar_aa"
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:background="@color/green"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rating_text_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/rating_a"
                android:textSize="25sp" />

            <View
                android:id="@+id/bar_a"
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:background="@color/green"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rating_text_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/rating_b"
                android:textSize="25sp" />

            <View
                android:id="@+id/bar_b"
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rating_text_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/rating_c"
                android:textSize="25sp" />

            <View
                android:id="@+id/bar_c"
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:background="@color/orange"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rating_text_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/rating_d"
                android:textSize="25sp" />

            <View
                android:id="@+id/bar_d"
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:visibility="invisible" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>