<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/glass_card_footer_margin"
    android:layout_marginLeft="@dimen/glass_card_margin"
    android:layout_marginRight="@dimen/glass_card_margin"
    android:layout_marginTop="@dimen/glass_card_margin"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:background="@color/green">

    <LinearLayout
        android:id="@+id/left_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">

        <TextView
            android:id="@+id/left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/left_arrow"
            android:textColor="@color/black"
            android:textSize="45sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/center_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <Space
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/imageView"
            android:src="@drawable/black_check"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/tap_to_send"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_weight="3"
            android:textColor="@color/black"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/right_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="vertical"
        android:layout_marginRight="5dp">

        <TextView
            android:id="@+id/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/right_arrow"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:textSize="45sp"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>